# studious-spork

./: .gitignore  README.md
backend/: Makefile  pyproject.toml
backend/snippets/: debug.py
backend/studious_spork/: main.py  models.py
backend/studious_spork/__deprecated/: app.py  pydantic_test.py
backend/studious_spork/routers/: cars.py
frontend/: package-lock.json  package.json  postcss.config.js
frontend/src/: App.js  index.css  index.js
frontend/src/components/: Card.js  Card.jsx  Footer.jsx  FormInput.jsx  Header.js  Header.jsx  Layout.jsx  Loading.jsx  Lorem.jsx
frontend/src/pages/: Car.js  Cars.js  NewCar.js
