[project]
name = "studious-spork"
version = "0.1.0"
description = ""
authors = [
    {name = "David Grimm",email = "saempfglas@googlemail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "ruff (>=0.9.6,<0.10.0)",
    "black (>=25.1.0,<26.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
